# pybv

./: .git-blame-ignore-revs  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: CONTRIBUTING.md
.github/workflows/: python_build.yml  python_publish.yml  python_tests.yml  release.yml
docs/: Makefile  api.rst  authors.rst  changelog.rst  conf.py  index.rst  requirements.txt
docs/sphinxext/: gh_substitutions.py
pybv/: __init__.py  _export.py  io.py
pybv/tests/: test_bv_writer.py  test_export.py
specification/: README.md
tests/: test_write_brainvision.py
