[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pybv"
authors = [
    {name = "pybv developers"},
]
maintainers = [
    {name = "Stefan Appelhoff", email = "stefan.appelhoff@mailbox.org"},
]
description = "pybv – a lightweight I/O utility for the BrainVision data format"
keywords = ["Brain Products", "BrainVision", "vhdr", "vmrk", "eeg"]
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "numpy >= 1.18.1",
]
dynamic = ["version"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
full = [
    "mne >= 1.0",
]

dev = [
    "pybv[full]",
    "check-manifest",
    "numpydoc",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-sugar",
    "ruff",
    "sphinx",
    "sphinx-copybutton",
]

[project.urls]
Documentation = "https://pybv.readthedocs.io"
Repository = "https://github.com/bids-standard/pybv"
Issues = "https://github.com/bids-standard/pybv/issues"

[tool.ruff.lint]
select = ["A", "B006", "D", "E", "F", "I", "W", "UP"]
ignore = ["D203", "D213"]

[tool.setuptools.dynamic]
version = {attr = "pybv.__version__"}

[tool.setuptools.packages.find]
exclude = ["docs", "specification"]
