[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
  {name = "pybv developers"},
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]
dependencies = [
  "numpy >= 1.18.1",
]
description = "pybv - a lightweight I/O utility for the BrainVision data format"
dynamic = ["version"]
keywords = ["Brain Products", "BrainVision", "eeg", "vhdr", "vmrk"]
license = {file = "LICENSE"}
maintainers = [
  {email = "stefan.appelhoff@mailbox.org", name = "Stefan Appelhoff"},
]
name = "pybv"
readme = "README.rst"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "check-manifest",
  "intersphinx_registry",
  "mne",
  "numpydoc",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-sugar",
  "ruff",
  "sphinx",
  "sphinx-copybutton",
]

[project.urls]
Documentation = "https://pybv.readthedocs.io"
Issues = "https://github.com/bids-standard/pybv/issues"
Repository = "https://github.com/bids-standard/pybv"

[tool.ruff.lint]
ignore = ["D203", "D213"]
select = ["A", "B006", "D", "E", "F", "I", "UP", "W"]

[tool.setuptools.dynamic]
version = {attr = "pybv.__version__"}

[tool.setuptools.packages.find]
exclude = ["docs", "specification"]

[tool.tomlsort]
all = true
ignore_case = true
spaces_before_inline_comment = 2
trailing_comma_inline_array = true
