[build-system]
build-backend = "hatchling.build"
requires = ["hatch-vcs", "hatchling"]

[project]
authors = [
  {name = "pybv developers"},
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy >= 1.18.1",
]
description = "pybv - a lightweight I/O utility for the BrainVision data format"
dynamic = ["version"]
keywords = ["Brain Products", "BrainVision", "eeg", "vhdr", "vmrk"]
license = {file = "LICENSE"}
maintainers = [
  {email = "stefan.appelhoff@mailbox.org", name = "Stefan Appelhoff"},
]
name = "pybv"
readme = {content-type = "text/x-rst", file = "README.rst"}
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["ipykernel", "ipython", "pybv[test,docs]"]
docs = [
  "intersphinx_registry",
  "matplotlib",
  "numpydoc",
  "sphinx-copybutton",
  "sphinx<9",
]
test = [
  "build",
  "matplotlib",
  "mne",
  "packaging",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-sugar",
  "ruff",
  "twine",
]

[project.urls]
Documentation = "https://pybv.readthedocs.io"
Issues = "https://github.com/bids-standard/pybv/issues"
Repository = "https://github.com/bids-standard/pybv"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = ["if 0:", "if __name__ == .__main__.:", "pragma: no cover"]

[tool.coverage.run]
omit = ["*tests*"]

[tool.hatch.build]
exclude = [
  "/.*",
  "/.github/**",
  "/docs",
  "/specification",
  "tests/**",
]

[tool.hatch.metadata]
allow-direct-references = true  # allow specifying URLs in our dependencies

[tool.hatch.version]
raw-options = {version_scheme = "release-branch-semver"}
source = "vcs"

[tool.pytest.ini_options]
addopts = """. --doctest-modules --cov=pybv/ --cov-report=xml --cov-config=pyproject.toml --verbose -s"""
filterwarnings = [
]

[tool.ruff.lint]
ignore = ["D203", "D213"]
select = ["A", "B006", "D", "E", "F", "I", "UP", "W"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.tomlsort]
all = true
ignore_case = true
spaces_before_inline_comment = 2
trailing_comma_inline_array = true
