[metadata]
name = pybv
url = https://github.com/bids-standard/pybv
download_url = https://github.com/bids-standard/pybv
author = pybv developers
maintainer = Stefan Appelhoff
maintainer_email = stefan.appelhoff@mailbox.org
description = pybv -- A lightweight I/O utility for the BrainVision data format.
keywords = Brain Products, BrainVision, vhdr, vmrk, eeg
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD-3-Clause
license_files = LICENSE
platforms = any
classifiers =
  Topic :: Scientific/Engineering
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  License :: OSI Approved
  Topic :: Software Development
  Topic :: Scientific/Engineering
  Operating System :: Microsoft :: Windows
  Operating System :: POSIX :: Linux
  Operating System :: MacOS
  Programming Language :: Python
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
project_urls =
  Documentation = https://pybv.readthedocs.io
  Bug Reports = https://github.com/bids-standard/pybv/issues
  Source = https://github.com/bids-standard/pybv

[options]
python_requires = ~= 3.8
install_requires =
  numpy >= 1.18.1
packages = find:
include_package_data = True

[options.packages.find]
include =
  pybv
  pybv.tests
exclude =
  specification
  docs

[options.extras_require]
export =
  mne >= 1.0

[bdist_wheel]
universal = true

[flake8]
docstring-convention = numpy
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
extend-ignore =
  # See https://github.com/PyCQA/pycodestyle/issues/373
  E203

[isort]
profile=black
